some slight alignment corrections

--- a/bin/Application/src/style.css
+++ b/bin/Application/src/style.css
@@ -31,7 +31,8 @@
 }
 
 .inner{
-	-fx-padding: 5;
+	-fx-padding: 8;
+	-fx-spacing: 5;
 }
 
 .button {
